--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -34,7 +34,7 @@
     </div>
 
     <div id="container">
-      <section class="main2" id="home">
+      <section class="main2-contact" id="home">
         <div class="contact">
           <div class="map">
             <iframe
