--- a/views/team.ejs
+++ b/views/team.ejs
@@ -31,11 +31,11 @@
     <div><h1 class="title-team">TEAM</h1></div>
     <div id="video_motto_div" class="grid1">
       <video class="team-video" autoplay muted loop>
-        <source src="https://i.imgur.com/a4hXO1d.mp4" type=video/mp4>
+        <source src="https://i.imgur.com/sPACqEK.mp4" type=video/mp4>
       </video>
     </div>
   </section>
-  <section>
+  <section class="team-main">
     <body>
       <div class="members">
         <div class="member1">
