--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,10 +1,16 @@
 <div id="contact">
   <div class="logos">
-    <img class="cu" src="https://i.imgur.com/wklPWMY.png" />
-    <p class="footer">nassour.joe@gmail.com</p>
-
-    <a href="https://twitter.com/NassourJoe"
-      ><img class="twitter" src="https://i.imgur.com/gjxesPV.png" alt=""
+    <a class="footer" href="https://www.cuanschutz.edu">
+      <img class="loc" src="https://i.imgur.com/k7z8DFi.png"
+    /></a>
+    <a class="footer" href="https://www.youtube.com/@CUAnschutz">
+      <img class="youtube" src="https://i.imgur.com/zuDYUOp.png"
+    /></a>
+    <a class="footer" href="mailto: nassour.joe@gmail.com" target="_blank"
+      ><img class="mail" src="https://i.imgur.com/IVKJ0cU.png"
+    /></a>
+    <a class="footer" href="https://twitter.com/NassourJoe">
+      <img class="twitter" src="https://i.imgur.com/3YvJmHM.png" alt=""
     /></a>
   </div>
 </div>
