--- a/views/research.ejs
+++ b/views/research.ejs
@@ -28,9 +28,9 @@
         </button>
         <div class="dropdown-content">
           <a href="#telomere-dynamics">Proliferative Barriers</a>
-          <a href="#escaping-crisis">Cell Immortalization </a>
+          <a href="#telomere-dynamics">Cell Immortalization </a>
           <a href="#telo-mito">Telomere-Mitochondrial Crosstalk </a>
-          <a href="#autophagy-cell-death">Autophagy and Cell Death</a>
+          <a href="#telo-mito">Autophagy and Cell Death</a>
           <a href="#autophagy-gen-int">Autophagy and Genomic Integrity</a>
         </div>
       </div>
