--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -345,15 +345,16 @@ body {
   margin-left: 2em;
 }
 #telomere-dynamics,
-
+#escaping-crisis,
 #autophagy-cell-death,
-
+#autophagy-gen-int,
 #telo-mito {
+  
   background-color: #C5D0D5;
   margin-bottom: 0;
   padding-bottom: 0;
   width: 100vw;
-  height: 100vh;
+  height: 100%;
   font-size: 20px;
   font-size: 1.5vw;
   scroll-behavior: smooth;
