--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -154,7 +154,7 @@ body {
   margin-bottom: 0;
   padding-bottom: 0;
   width: 100vw;
-  height: 100vh;
+  height: 100%;
   font-size: 20px;
   font-size: 1.5vw;
   scroll-behavior: smooth;
