--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -143,7 +143,7 @@ body {
   margin-bottom: 0;
   padding-bottom: 0;
   width: 100vw;
-  height: 150vh;
+  height: 150%;
   font-size: 20px;
   font-size: 1.5vw;
   scroll-behavior: smooth;
@@ -151,8 +151,8 @@ body {
 
 .main2-philo, .main2-contact {
   background-color: #C5D0D5;
-  margin-bottom: 0;
-  padding-bottom: 0;
+  padding-bottom: 3em;;
+
   width: 100vw;
   height: 100%;
   font-size: 20px;
@@ -187,6 +187,7 @@ body {
   margin-left: 2em;
   justify-content: center;
   text-align: center;
+  margin-bottom: 2em;
 }
 .fund {
   height: 10%;
