--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -20,7 +20,7 @@
   <body class="contact-body">
     <div class="main-contact">
       <section class="main">
-        <img class="cu" src="https://i.imgur.com/wklPWMY.png" />
+       
         <nav class="head_navbar">
           <a href="/home">Home</a>
           <a href="/team">Team</a>
@@ -32,53 +32,51 @@
         <div><h1 class="contact-title">CONTACT</h1></div>
       </section>
     </div>
-
+    
     <div id="container">
-      <section class="main2-contact" id="home">
+      <section class="main2-contact" >
         <div class="contact">
-          <div class="map">
-            <iframe
-              class="googlemap"
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13118.357130515553!2d-104.84664404596504!3d39.744785895465384!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x876c634e9c1175bf%3A0x8c73d43ad4ae81e8!2s12801%20E%2017th%20Ave%20l18%209118%2C%20Aurora%2C%20CO%2080045!5e0!3m2!1sen!2sus!4v1678581309436!5m2!1sen!2sus"
-              width="600"
-              height="450"
-              style="border:0;"
-              allowfullscreen=""
-              loading="lazy"
-              referrerpolicy="no-referrer-when-downgrade"
-            ></iframe>
-          </div>
+          
+          <img class = "help" src="https://i.imgur.com/nDcWIHW.jpg"/>
           <div class="contact-info">
-            <p class="address">
-              University of Colorado School of Medicine<br />
-              Research Complex 1 South<br />
-              12801 E 17th Ave, Aurora, CO 80045<br />
-            </p>
-            <div class="contact-pics">
-              <a href="mailto: nassour.joe@gmail.com" target="_blank"
-                ><img class="email" src="https://i.imgur.com/2cyOvUu.png"
-              /></a>
-              <a
-                onclick="window.open ('https://twitter.com/NassourJoe', ''); return false"
-                href="javascript:void(0);"
-                ><img
-                  class="twitter-contact"
-                  src="https://i.imgur.com/gjxesPV.png"
-                  alt=""
-              /></a>
-              <a
-                onclick="window.open ('https://medschool.cuanschutz.edu/biochemistry', ''); return false"
-                href="javascript:void(0);"
-                ><img
-                  class="twitter-contact"
-                  src="https://i.imgur.com/4RU6ISn.png"
-                  alt=""
-              /></a>
-            </div>
+            
+            <h1>Contact Us.</h1>
+            <p class="contact-1">The Nassour lab is part of the University of Colorado - Denver with lab space located at the Anschutz Medical Campus.</p>
+       
+           <p class="name">Joe Nassour - Head of Lab</p>
+           <p  class="name2">jnassour@salk.edu</p>
+
+          
+           <div class="map" style="-webkit-filter: grayscale(100%);
+        filter: grayscale(100%);">
+         <p class="name3">
+          University of Colorado School of Medicine<br />
+          Research Complex 1 South<br />
+          12801 E 17th Ave, Aurora, CO 80045<br />
+        </p>
+          <iframe
+            class="googlemap"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13118.357130515553!2d-104.84664404596504!3d39.744785895465384!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x876c634e9c1175bf%3A0x8c73d43ad4ae81e8!2s12801%20E%2017th%20Ave%20l18%209118%2C%20Aurora%2C%20CO%2080045!5e0!3m2!1sen!2sus!4v1678581309436!5m2!1sen!2sus"
+            width="600"
+            height="450"
+            style="border:0;"
+
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+           
+          ></iframe>
+
+        </div>
+        
+        </div>
           </div>
         </div>
-        <%- include('./partials/footer') %>
+        
+    
       </section>
+    
+      <%- include('./partials/footer') %>
     </div>
   </body>
 </html>
