--- a/views/team.ejs
+++ b/views/team.ejs
@@ -50,7 +50,7 @@
 
         <div class="member2">
           <div class="img_crop_2">
-            <img class="member_pic2" src="https://i.imgur.com/UpX4B8M.png" />
+            <img class="member_pic2" src="https://i.imgur.com/Kr50HyO.png" />
           </div>
           <p class="team_desc">
             Puts the Nassour in the Nassour Lab. The OG - original gansta. Knows
@@ -69,15 +69,7 @@
       </div>
     </body>
 
-    <div id="res-footer">
-      <div class="logos">
-        <img class="cu" src="https://i.imgur.com/wklPWMY.png" />
-        <p class="footer">nassour.joe@gmail.com</p>
 
-        <a href="https://twitter.com/NassourJoe"
-          ><img class="twitter" src="https://i.imgur.com/gjxesPV.png" alt=""
-        /></a>
-      </div>
-    </div>
   </section>
+  <%- include('./partials/footer') %>
 </html>
