--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -10,7 +10,23 @@ video {
   opacity: 60%;
   background-color: black;
 }
-
+.main2 {
+  background-color: #C5D0D5;
+  margin-bottom: 0;
+  padding-bottom: 0;
+  width: 100vw;
+  height: 150%;
+  font-size: 20px;
+  font-size: 1.5vw;
+  scroll-behavior: smooth;
+}
+.main {
+  position: relative;
+  width: 100vw;
+  height: 100vh;
+  background-color: transparent;
+  scroll-behavior: smooth;
+}
 a {
   color: #C5D0D5;
   padding: 20px;
@@ -127,38 +143,14 @@ body {
   background-color: black;
 }
 
-.main {
-  position: relative;
-  width: 100vw;
-  height: 100vh;
-  background-color: transparent;
-  scroll-behavior: smooth;
-}
+
 
 /*********************/
 /*section 2 main page*/
 
-.main2 {
-  background-color: #C5D0D5;
-  margin-bottom: 0;
-  padding-bottom: 0;
-  width: 100vw;
-  height: 150%;
-  font-size: 20px;
-  font-size: 1.5vw;
-  scroll-behavior: smooth;
-}
 
-.main2-philo, .main2-contact {
-  background-color: #C5D0D5;
-  padding-bottom: 3em;;
 
-  width: 100vw;
-  height: 100%;
-  font-size: 20px;
-  font-size: 1.5vw;
-  scroll-behavior: smooth;
-}
+
 .about1,
 .about2,
 .about3 {
@@ -363,6 +355,33 @@ body {
 
 /*******************************/
 /*contact styling*/
+.main2-philo, .main2-contact {
+  background-color: #C5D0D5;
+  padding-bottom: 3em;;
+
+  width: 100vw;
+  height: 100%;
+  font-size: 20px;
+  font-size: 1.5vw;
+  scroll-behavior: smooth;
+}
+.help{
+  height: 25em;
+  width: 30em;
+  border-radius: 20%
+ }
+ .name{
+  margin-top:2em;
+  font-size: 18px;
+ }
+ .name2{
+  
+  font-size: 18px;
+ }
+ .name3{
+  margin-top:2em;
+  font-size: 18px;
+ }
 .main-contact {
   background-image: url("https://i.imgur.com/uWBGd2p.jpg");
   background-repeat: no-repeat;
@@ -370,12 +389,18 @@ body {
   background-size: 100% 100%;
 }
 .googlemap {
-  margin-left: 0;
-  margin-top: 70px;
+  height:30%;
+  width:40%;
+  margin-left: 2em;
+ 
+ 
 }
 .map {
-  display: inline-block;
+  display: flex;
+  
+  margin-right:0;
 }
+
 .contact {
   margin: 3em;
 
@@ -385,7 +410,7 @@ body {
 }
 .contact-body {
   z-index: -2;
-  background-color: white;
+  background-color: #C5D0D5;
 }
 .contact-info {
   margin-left: 50px;
