--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,15 +1,34 @@
 <div id="contact">
   <div class="logos">
-    <a class="footer" href="https://www.cuanschutz.edu">
+
+
+
+      <a class="footer"
+      onclick="window.open ('https://www.cuanschutz.edu', ''); return false"
+      href="javascript:void(0);"
+      >  
       <img class="loc" src="https://i.imgur.com/k7z8DFi.png"
     /></a>
-    <a class="footer" href="https://www.youtube.com/@CUAnschutz">
+
+
+      <a class="footer"
+      onclick="window.open ('https://www.youtube.com/@CUAnschutz', ''); return false"
+      href="javascript:void(0);"
+      >  
       <img class="youtube" src="https://i.imgur.com/zuDYUOp.png"
     /></a>
+
+
+
     <a class="footer" href="mailto: nassour.joe@gmail.com" target="_blank"
       ><img class="mail" src="https://i.imgur.com/IVKJ0cU.png"
     /></a>
-    <a class="footer" href="https://twitter.com/NassourJoe">
+
+
+    <a class="footer"
+    onclick="window.open ('https://twitter.com/NassourJoe', ''); return false"
+    href="javascript:void(0);"
+    >  
       <img class="twitter" src="https://i.imgur.com/3YvJmHM.png" alt=""
     /></a>
   </div>
