--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,16 +31,16 @@
         <a href="/contact">Contact</a>
       </nav>
 
-      <div><h1 class="title">NASSOUR LAB</h1></div>
-      <div id="video_motto_div" class="grid1">
-        <video class="research-video" autoplay muted loop>
-          <source src="https://i.imgur.com/qazezeu.mp4" type=video/mp4>
-        </video>
-
-        <div class="motto_main">
-          <p id="telomere">TELOMERE FUNCTIONS IN AGING AND CANCER</p>
+      <div class="philo-title"><h1 class="h1-title">NASSOUR LAB</h1></div>
+  
+        <div class="philo_main">
+          <p class="philo">TELOMERE FUNCTIONS IN AGING AND CANCER</p>
         </div>
-      </div>
+        <div id="video_motto_div" >
+          <video class="research-video" autoplay muted loop>
+            <source src="https://i.imgur.com/qazezeu.mp4" type=video/mp4>
+          </video>
+        </div>
     </section>
 
     <script>
