--- a/views/philosophy.ejs
+++ b/views/philosophy.ejs
@@ -29,7 +29,7 @@
         <a href="/contact">Contact</a>
       </nav>
 
-      <div><h1 class="title">PHILOSOPHY</h1></div>
+      <div class = "philo-title"><h1 class="h1-title">PHILOSOPHY</h1></div>
       <div class="philo_main">
         <p class="philo">
           Our lab strives to make a positive impact on humanity by addressing
