--- a/views/publications.ejs
+++ b/views/publications.ejs
@@ -18,7 +18,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   </head>
-
+<div   id="container">
   <section class="main">
     <nav class="head_navbar">
       <a href="/home">Home</a>
@@ -29,7 +29,7 @@
       <a href="/contact">Contact</a>
     </nav>
 
-    <div><h1 class="title">PUBLICATIONS</h1></div>
+    <div class="philo-title"><h1 class="h1-title">PUBLICATIONS</h1></div>
     <div id="video_motto_div" class="grid1">
       <video class="research-video" autoplay muted loop>
         <source src="https://i.imgur.com/oApk8Sz.mp4" type=video/mp4>
@@ -37,11 +37,12 @@
     </div>
   </section>
 
-  <div id="container">
+  
     <section class="main2">
 
 
-      <%- include('./partials/footer') %>
+      
     </section>
+    <%- include('./partials/footer') %>
   </div>
 </html>
