--- a/views/research.ejs
+++ b/views/research.ejs
@@ -17,7 +17,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   </head>
-
+<div id="container">
   <section id="research-overall">
     <nav class="head_navbar">
       <a href="/home">Home</a>
@@ -59,7 +59,7 @@
       });
     </script>
 
-    <div><h1 class="title" id="res-title">RESEARCH</h1></div>
+    <div class="philo-title"><h1 class="h1-title" >RESEARCH</h1></div>
     <div id="video_motto_div" class="grid1">
       <div class="video-repeat">
         <video class="video1" autoplay muted loop>
@@ -189,4 +189,5 @@
     </section>
   </section>
   <%- include('./partials/footer') %>
+</div>
 </html>
