--- a/views/team.ejs
+++ b/views/team.ejs
@@ -17,7 +17,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   </head>
-
+  <div id="container">
   <section class="main">
     <nav class="head_navbar">
       <a href="/home">Home</a>
@@ -28,7 +28,16 @@
       <a href="/contact">Contact</a>
     </nav>
 
-    <div><h1 class="title-team">TEAM</h1></div>
+    <div class="philo-title"><h1 class="h1-title">TEAM</h1></div>
+    <div class="philo_main">
+      <p class="philo">
+        Join our team to work on creative projects focused on telomere biology, autophagy, and innate immune signaling.
+      </p>
+    </div>
+
+
+
+   
     <div id="video_motto_div" class="grid1">
       <video class="team-video" autoplay muted loop>
         <source src="https://i.imgur.com/sPACqEK.mp4" type=video/mp4>
@@ -72,4 +81,5 @@
 
   </section>
   <%- include('./partials/footer') %>
+  </div>
 </html>
