--- a/views/research.ejs
+++ b/views/research.ejs
@@ -31,7 +31,7 @@
           <a href="#telomere-dynamics">Cell Immortalization </a>
           <a href="#telo-mito">Telomere-Mitochondrial Crosstalk </a>
           <a href="#telo-mito">Autophagy and Cell Death</a>
-          <a href="#autophagy-gen-int">Autophagy and Genomic Integrity</a>
+          <a href="#autophagy-gen-int">Autophagy and Genome Integrity</a>
         </div>
       </div>
 
@@ -60,7 +60,10 @@
     </script>
 
     <div class="philo-title"><h1 class="h1-title" >RESEARCH</h1></div>
-    <div id="video_motto_div" class="grid1">
+    <div class="philo_main">
+   <p class ="philo" >Our aim is to uncover the intriguing relationship between telomeres, autophagy, and innate immunity, and their collective role in preventing the onset of cancer.</p>
+  </div> 
+   <div id="video_motto_div" class="grid1">
       <div class="video-repeat">
         <video class="video1" autoplay muted loop>
           <source src="https://i.imgur.com/fw1b7AW.mp4" type=video/mp4>
@@ -115,7 +118,7 @@
       <div class="research-div">
         <div>
           <h1 class="research-title" id="r3">
-            TELOMERE-MITOCHONDRIAL CORSSTALK AND INNATE IMMUNITY
+            TELOMERE-MITOCHONDRIAL CROSSTALK AND INNATE IMMUNITY
           </h1>
           <p class="research-p" id="d3">
             In a recent study, we discovered a novel pathway that involves the
@@ -164,7 +167,7 @@
       <div class="research-div">
         <div>
           <h1 class="research-title" id="r3">
-            AUTOPHAGY AND GENOMIC INTEGRITY
+            AUTOPHAGY AND GENOME INTEGRITY
           </h1>
           <p class="research-p" id="d3">
             Micronuclei (MN), small nuclear structures formed by mitotic errors
