--- a/views/team.ejs
+++ b/views/team.ejs
@@ -46,36 +46,30 @@
   </section>
   <section class="team-main">
     <body>
-      <div class="members">
+     
+      <div class = "team-pg">
+
         <div class="member1">
-          <div class="img_crop_1">
-            <img class="member_pic1" src="https://i.imgur.com/NzxkG6j.png" />
-          </div>
-          <p class="team_desc">
-            Joined Nassour Lab in October 2019. Specializes in annoying Joe,
-            cuddles with Amy, eating anything.
-          </p>
-        </div>
+          <div class="m1-div">
 
-        <div class="member2">
-          <div class="img_crop_2">
-            <img class="member_pic2" src="https://i.imgur.com/Kr50HyO.png" />
+            <img class="member_pic1" src="https://i.imgur.com/Kr50HyO.png" />
+            <div class="pi-div">
+           <p class="pi">Principal Investigator</p>
           </div>
-          <p class="team_desc">
-            Puts the Nassour in the Nassour Lab. The OG - original gansta. Knows
-            more science than your mom. Prioritizes windows..
-          </p>
-        </div>
+            </div>
+            <div class="member-container">
 
-        <div class="member3">
-          <div class="img_crop_3">
-            <img class="member_pic3" src="https://i.imgur.com/fMbF26b.jpg" />
+            <h1 class="member-name">Joe Nassour</h1>
+            <p class="team_desc">
+              Joe Nassour obtained his doctoral degree from the Institut Pasteur - University of Lille in France and further advanced his training by completing a postdoctoral fellowship at the Salk Institute for Biological Studies in the US.
+               Currently, he holds the position of Assistant Professor in the Department of Biochemistry and Molecular Genetics at the University of Colorado Anschutz Medical Campus. 
+            </p>
           </div>
-          <p class="team_desc">
-            Web developer, actuary, bioinformaticion. What cant she do?
-          </p>
+          </div>
+         <div><p>We are actively seeking driven, collaborative scientists to join our lab. Join us!</p></div>
         </div>
-      </div>
+    
+    
     </body>
 
 
