--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -16,7 +16,7 @@ video {
   padding-bottom: 0;
   width: 100vw;
   height: 150%;
-  font-size: 20px;
+  
   font-size: 1.5vw;
   scroll-behavior: smooth;
 }
@@ -30,7 +30,7 @@ video {
 a {
   color: #C5D0D5;
   padding: 20px;
-  font-size: 22px;
+  font-size: 3vh;
   text-decoration: none;
   font-family: "Abel", sans-serif;
 }
@@ -58,8 +58,8 @@ nav {
 .dropbtn {
   background-color: transparent;
   color: white;
-  padding-bottom: 16px;
-  font-size: 16px;
+  padding-bottom: 2vh;
+  font-size: 1.5vh;
   border: none;
 }
 
@@ -74,8 +74,8 @@ nav {
   display: none;
   position: absolute;
   background-color: white;
-  min-width: 180px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  min-width: 20vh;
+  box-shadow: 0px 20vh 20vh 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
   opacity: 50%;
   text-align: center;
@@ -84,11 +84,11 @@ nav {
 /* Links inside the dropdown */
 .dropdown-content a {
   color: black;
-  padding: 12px 16px;
+  padding: 1vh 1vh;
   text-decoration: none;
   display: block;
-  font-size: 15px;
-  
+  font-size: 1.8vh;
+
 }
 
 /* Change color of dropdown links on hover */
@@ -101,19 +101,7 @@ nav {
   display: block;
 }
 
-.title {
-  position: absolute;
-  justify-content: center;
-  top: 50%;
-  left: 27%;
-  margin: auto;
-  font-size: 100px;
-  color: #3089b4;
-  font-weight: bold;
-  font-family: "Tilt Warp", cursive;
-  background-color: transparent;
-  animation: fadeIn 5s;
-}
+
 @keyframes fadeIn {
   0% { opacity: 0; }
   100% { opacity: 1; }
@@ -238,52 +226,105 @@ body {
 /*****************************/
 /* team styling*/
 
-.title-team {
-  position: absolute;
-  justify-content: center;
-  top: 50%;
-  left: 40%;
-  margin: auto;
-  font-size: 100px;
-  color: #3089b4;
-  font-weight: bold;
-  font-family: "Tilt Warp", cursive;
-  background-color: transparent;
-  animation: fadeIn 5s;
-}
+
 .team-video {
   opacity: 90%;
   overflow: hidden;
   height: 100%;
   width: 100%;
 }
-.member_pic1,
-.member_pic2,
-.member_pic3 {
-  object-fit: cover;
-  border-radius: 50%;
-  height: 100px;
-  width: 100px;
-  margin: 2em;
+.member_pic1 {
+
+  border-radius: 0%;
+    height: 60%;
+    width: 70%;
+    margin-bottom:0;
+    margin-top:5vh;
+    display: flex;
+   justify-content: center;
+  }
+.member1{
+  margin:auto;
+  position: relative;
+  width: 30%;
+  margin-left:10vh;
 }
-.members {
-  padding: 10em;
+.m1-div{
+ display: flex;
+ justify-content: center;
+ position:relative;
+ overflow: hidden;
+}
+.pi-div {
+  position: absolute;
+  justify-content: center;
+  top: 5vh;
+  bottom: 0;
+  height: 100%;
+  width: 70%;
+  opacity: 0;
+  transition: .5s ease;
+
 }
 
-.team_desc {
-  color: white;
-  font-family: "Abel", sans-serif;
-  margin-bottom: 2em;
-  line-height: 2em;
-  font-size: 20px;
-  margin-left: 5em;
-  margin-right: 10em;
-  margin-top: 2em;
+
+.m1-div:hover .member_pic1 {
+  opacity: 60%;
 }
-.member1,
-.member2,
-.member3 {
+.m1-div:hover .pi-div {
+  opacity: 1;
+}
+.pi{
+  font-family: "Abel", sans-serif, bold;
+  color: black;
+  font-size: 3vh;
+  position: absolute;
+  top: 70%;
+  left: 70%;
+  text-align: center;
+  justify-content: center;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+}
+/*.member_pic1:hover {
+  opacity: 60%;
+  transition:opacity 2s;
+}
+*/
+
+
+.member-name{
+
+  width:100%;
+  color: black;
+  font-family: "Abel", sans-serif;
+  margin-bottom: 1vh;
+  margin-top: 2vh;
+  justify-content: center;
+  text-align:center;
+  margin-left:0em;
+}
+
+
+.team_desc {
+ 
+  color: black;
+  font-family: "Abel", sans-serif;
+  margin-bottom: 7vh;
+  line-height: 1em;
+  font-size: 2.5vh;
+ 
+  margin-top: 0em;
+  width:100%;
+  text-align:justify;
+}
+
+.team-main{
+  background-color: #C5D0D5;
+}
+.team-pg{
   display: flex;
+ 
 }
 /******************************/
 /* research page style */
@@ -306,11 +347,7 @@ body {
   height: auto;
   margin-left: 0.5em;
 }
-.research-title {
-  color: black;
-  font-family: "Abel", sans-serif;
-  animation: fadeIn 5s;
-}
+
 .research-div {
   margin: 3em;
   display: flex;
@@ -364,7 +401,7 @@ body {
   padding-bottom: 0;
   width: 100vw;
   height: 100%;
-  font-size: 20px;
+
   font-size: 1.5vw;
   scroll-behavior: smooth;
 }
@@ -399,6 +436,8 @@ body {
   font-size: 18px;
  }
 .main-contact {
+  margin:0;
+  padding:0;
   background-image: url("https://i.imgur.com/uWBGd2p.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -427,6 +466,8 @@ body {
 .contact-body {
   z-index: -2;
   background-color: #C5D0D5;
+  margin:0;
+  padding:0;
 }
 .contact-info {
   margin-left: 50px;
@@ -441,17 +482,24 @@ body {
 }
 
 .contact-title {
-  position: absolute;
+  margin:auto;
+  text-align: center;
   justify-content: center;
-  top: 50%;
-  left: 35%;
-  margin: auto;
-  font-size: 100px;
+  margin-bottom:0;
+}
+.contact-h1{
+  text-align: center;
+  justify-content: center;
+  margin-top:0;
+  padding-top: 30%;
+  margin-bottom:0;
+  padding-bottom:0;
+  font-size: 15vh;
   color: white;
   font-weight: bold;
   font-family: "Tilt Warp", cursive;
   background-color: transparent;
-  animation: fadeIn 5s;
+  animation: fadeIn 4s;
 }
 .email {
   height: 10%;
@@ -484,18 +532,18 @@ body {
   padding-top: 20%;
   margin-bottom:0;
   padding-bottom:0;
-  font-size: 100px;
+  font-size: 15vh;
   color: #3089b4;
   font-weight: bold;
   font-family: "Tilt Warp", cursive;
   background-color: transparent;
-  animation: fadeIn 5s;
+  animation: fadeIn 4s;
 }
 .philo_main {
   color: #d7e6ec;
   margin:auto;
   
-  font-size: 25px;
+  font-size:3vh;
   width:78%
 }
 .philo {
@@ -539,8 +587,8 @@ body {
 .youtube,
 .loc,
 .mail {
-  height: 2.5rem;
-  width: 2.5rem;
+  height: 5vh;
+  width: 5vh;
   padding-top: 0;
   text-align: center;
   margin-top: 1em;
