--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -29,7 +29,7 @@
           <a href="/philosophy">Philosophy</a>
           <a class="mainlink" href="/contact">Contact</a>
         </nav>
-        <div class="philo-title"><h1 class="contact-title">CONTACT</h1></div>
+        <div class="contact-title"><h1 class="contact-h1">CONTACT</h1></div>
       </section>
     </div>
     
