--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,7 @@
   </head>
   <div id="container">
     <section class="main">
-      
+      <img class="nlab-logo" src ="https://i.imgur.com/LSzCMnS.png"/>
       <nav class="head_navbar">
         
         <a class="mainlink" href="#home">Home</a>
@@ -112,13 +112,11 @@
       </p>
       <h2 class="fund-title">SUPPORT</h2>
       <div class="fund-div">
-        <img class="fund1" src="https://i.imgur.com/OFlQZg8.png" />
+        <img class="fund1" src="https://i.imgur.com/tMseDcR.png" />
        
-        <img class="fund" src="https://i.imgur.com/qdPGs4M.png" />
+      
       </div>
-      <div class="fund-div">
-      <img class="fund3" src="https://i.imgur.com/mCZuitt.png" />
-    </div>
+      
     </section>
     <%- include('./partials/footer') %>
   </div>
