--- a/views/publications.ejs
+++ b/views/publications.ejs
@@ -20,6 +20,7 @@
   </head>
 <div   id="container">
   <section class="main">
+    <img class="nlab-logo" src ="https://i.imgur.com/LSzCMnS.png"/>
     <nav class="head_navbar">
       <a href="/home">Home</a>
       <a href="/team">Team</a>
