--- a/views/team.ejs
+++ b/views/team.ejs
@@ -19,6 +19,7 @@
   </head>
   <div id="container">
   <section class="main">
+    <img class="nlab-logo" src ="https://i.imgur.com/LSzCMnS.png"/>
     <nav class="head_navbar">
       <a href="/home">Home</a>
       <a class="mainlink" href="/team">Team</a>
