--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -20,7 +20,7 @@
   <body class="contact-body">
     <div class="main-contact">
       <section class="main">
-       
+        <img class="nlab-logo" src ="https://i.imgur.com/LSzCMnS.png"/>
         <nav class="head_navbar">
           <a href="/home">Home</a>
           <a href="/team">Team</a>
