--- a/views/research.ejs
+++ b/views/research.ejs
@@ -19,6 +19,7 @@
   </head>
 <div id="container">
   <section id="research-overall">
+    <img class="nlab-logo" src ="https://i.imgur.com/LSzCMnS.png"/>
     <nav class="head_navbar">
       <a href="/home">Home</a>
       <a href="/team">Team</a>
