--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -41,7 +41,7 @@
           <div class="contact-info">
             
             <h1>Contact Us.</h1>
-            <p class="contact-1">The Nassour lab is part of the University of Colorado - Denver with lab space located at the Anschutz Medical Campus.</p>
+            <p class="contact-1">We're affiliated with the University of Colorado School of Medicine and our lab is situated at the Anschutz Medical Campus.</p>
        
            <p class="name">Joe Nassour - Head of Lab</p>
            <p  class="name2">jnassour@salk.edu</p>
