--- a/views/team.ejs
+++ b/views/team.ejs
@@ -31,7 +31,9 @@
 
     <div class="philo-title"><h1 class="h1-title">TEAM</h1></div>
     <div class="philo_main">
+
       <p class="philo">
+
         Join our team to work on creative projects focused on telomere biology, autophagy, and innate immune signaling.
       </p>
     </div>
@@ -67,7 +69,11 @@
             </p>
           </div>
           </div>
-         <div><p>We are actively seeking driven, collaborative scientists to join our lab. Join us!</p></div>
+         <div class="join-us">
+         <h1>Join our growing team!</h1>
+          <p>We are constantly seeking talented and enthusiastic individuals to join our team. As a part of the University of Colorado School of Medicine, our lab is situated at the Anschutz Medical Campus, providing us with access to all the resources that the University of Colorado has to offer. In addition to being at the forefront of scientific research, Colorado is a breathtaking place to live, with plenty of outdoor activities and scenic beauty to explore.
+          </br>  </br>If you are passionate about research and would like to explore exciting opportunities, we encourage you to reach out to us with your CV and a brief overview of your research interests.</p>
+        </div>
         </div>
     
     
