--- a/views/index.ejs
+++ b/views/index.ejs
@@ -112,7 +112,7 @@
       </p>
       <h2 class="fund-title">SUPPORT</h2>
       <div class="fund-div">
-        <img class="fund1" src="https://i.imgur.com/tMseDcR.png" />
+        <img class="fund1" src="https://i.imgur.com/365a1bq.png" />
        
       
       </div>
