--- a/views/research.ejs
+++ b/views/research.ejs
@@ -126,9 +126,7 @@
             innate immune sensor ZBP1 activated specifically by telomeric long
             noncoding RNA (lncRNA) species transcribed from damaged telomeres.
             Upon binding to telomeric lncRNAs, ZBP1 translocates to the
-            mitochondrial outer membranes to launch a lethal immune response,
-            highlighting a synergy between telomeres, mitochondria, and innate
-            immunity that has evolved to prevent cancer initiation in humans.
+            mitochondrial outer membranes to launch a lethal immune response. 
             However, the underlying molecular mechanisms behind telomere-driven
             innate immune response are not defined and much work needs to be
             done to understand how telomeres are functionally linked to innate
