--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -527,6 +527,9 @@ body {
   text-align: center;
   justify-content: center;
   margin-bottom:0;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 .h1-title{
   text-align: center;
